Correccion Modelo Implementado FeedForward ( def evaluate_model(X,w) )

--- a/Modulo2_ML/Act 1. Implementación sin Framework/Codigo/MLsinFramework.ipynb
+++ b/Modulo2_ML/Act 1. Implementación sin Framework/Codigo/MLsinFramework.ipynb
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "35e34042",
    "metadata": {},
    "outputs": [],
@@ -896,10 +896,11 @@
     "def evaluate_model(X, w):\n",
     "    \"\"\"\n",
     "    Train the model using gradient descent.\n",
+    "    Feed forward from perceptron model.\n",
     "    X: Training features\n",
     "    w: Initial weights\n",
     "    \"\"\"\n",
-    "    eval_xw = X * w\n",
+    "    eval_xw = X * w # Feed forward\n",
     "    predictions = np.sum(eval_xw, axis=1).round()\n",
     "\n",
     "    for i in range(len(predictions)):\n",
